--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 
 env:
  - "RAILS_VERSION=5.1.4"
+ - "ENGINE_CART_RAILS_OPTIONS=--skip-git --skip-bundle"
 
 notifications:
   irc: "irc.freenode.org#blacklight"
